--- a/redis/values.yaml
+++ b/redis/values.yaml
@@ -363,7 +363,7 @@ master:
     enabled: true
     ## @param master.persistence.medium Provide a medium for `emptyDir` volumes.
     ##
-    medium: ""
+    medium: "emptyDir"
     ## @param master.persistence.path The path the volume will be mounted at on Redis&trade; master containers
     ## NOTE: Useful when using different Redis&trade; images
     ##
@@ -677,7 +677,7 @@ replica:
     enabled: true
     ## @param replica.persistence.medium Provide a medium for `emptyDir` volumes.
     ##
-    medium: ""
+    medium: "emptyDir"
     ## @param replica.persistence.path The path the volume will be mounted at on Redis&trade; replicas containers
     ## NOTE: Useful when using different Redis&trade; images
     ##
