--- a/redis/values.yaml
+++ b/redis/values.yaml
@@ -360,7 +360,7 @@ master:
   persistence:
     ## @param master.persistence.enabled Enable persistence on Redis&trade; master nodes using Persistent Volume Claims
     ##
-    enabled: true
+    enabled: false
     ## @param master.persistence.medium Provide a medium for `emptyDir` volumes.
     ##
     medium: "emptyDir"
@@ -674,7 +674,7 @@ replica:
   persistence:
     ## @param replica.persistence.enabled Enable persistence on Redis&trade; replicas nodes using Persistent Volume Claims
     ##
-    enabled: true
+    enabled: false
     ## @param replica.persistence.medium Provide a medium for `emptyDir` volumes.
     ##
     medium: "emptyDir"
