--- a/redis/values.yaml
+++ b/redis/values.yaml
@@ -106,10 +106,10 @@ architecture: replication
 auth:
   ## @param auth.enabled Enable password authentication
   ##
-  enabled: false
+  enabled: true
   ## @param auth.sentinel Enable password authentication on sentinels too
   ##
-  sentinel: false
+  sentinel: true
   ## @param auth.password Redis&trade; password
   ## Defaults to a random 10-character alphanumeric string if not set
   ##
